[package]
name = "acti-web-learn"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-files = "0.6.6"
actix-web = "4.11.0"
chrono = { version = "0.4.41", features = ["serde"] }
comrak = "0.39.0"
dotenv = "0.15.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.5", features = ["mysql", "runtime-async-std","chrono"] }
tokio = { version = "1.45.0", features = ["full"] }
